fix: bug button login on iphone

--- a/src/page/LoginFB/style.css
+++ b/src/page/LoginFB/style.css
@@ -11,5 +11,5 @@
 
 button[type="submit"] {
   position: relative;
-  z-index: 10;
+  z-index: 999;
 }
